# scara_project

scara_control/: CMakeLists.txt  package.xml
scara_control/config/: scara_control.yaml
scara_control/launch/: scara_control.launch  scara_rqt.launch  scara_rqt.perspective
scara_description/launch/: scara_rviz.launch
scara_description/urdf/: scara.gazebo  scara.xacro
scara_gazebo/: CMakeLists.txt
scara_gazebo/launch/: scara_world.launch
scara_kinematics/: CMakeLists.txt  package.xml
scara_kinematics/scripts/: scara_fwd_kinematics.py  scara_inverse_kinematics_client.py  scara_inverse_kinematics_server.py  scara_velocity_controller.py  scara_velocity_kinematics.py
scara_kinematics/srv/: FwdVelocityKinematics.srv  InvVelocityKinematics.srv  InverseKinematics.srv
